crates/nirvash-macros/tests/fixtures/runtime_contract_duplicate_action.stderr
error: duplicate contract_case action
   --> tests/fixtures/runtime_contract_duplicate_action.rs:120:5
    |
120 |     #[nirvash_macros::contract_case(action = Action::Start)]
    |     ^
